101 Spring Boot Profile Properties

--- a/ch6/src/main/resources/application.yml
+++ b/ch6/src/main/resources/application.yml
@@ -3,3 +3,13 @@ guru:
     username: jms username
     password: jms password
     url: someUrl
+
+---
+spring:
+  profiles: de
+
+guru:
+  jms:
+    username: jms username de
+    password: jms password de
+    url: someUrl de
